[project]
name = "narrative-pursuits"
version = "0.1.0"
description = "A FastAPI and Strawberry based system for running narrative RPGs"
authors = [
    { name = "AJ Griffiths", email = "164574794+damwaingames@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "strawberry-graphql[fastapi] (>=0.265.1,<0.266.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
ruff = "^0.11.6"
